Postman Test for All Route Done!

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://olcart:olcart%40ol@cluster0.je9gg.mongodb.net/
+MONGO_URI=mongodb+srv://olcart:olcart%40ol@cluster0.je9gg.mongodb.net/olcart
 JWT_SECRET=olcartsecret
 NODE_ENV=development
