--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npm run build --workspace=frontend && npm run build --workspace=backend",
+    "dev": "concurrently \"npm start --workspace=backend\" \"npm run dev --workspace=frontend\"",
+    "start": "npm start --workspace=frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "concurrently": "^8.2.0"
+  }
 }
