--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,10 @@
   "version": 2,
   "builds": [
     { "src": "frontend/package.json", "use": "@vercel/next" },
-    { "src": "backend/src/server.ts", "use": "@vercel/node" }
+    { "src": "backend/package.json", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/src/$1" },
+    { "src": "/api/(.*)", "dest": "/backend/dist/$1" },
     { "src": "/(.*)", "dest": "/frontend/$1" }
   ]
 }
