--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^8.2.0"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6"
   }
 }
