--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@nivo/bar": "^0.88.0",
+    "@nivo/line": "^0.88.0",
+    "@nivo/pie": "^0.88.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "cookie": "^1.0.2",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
@@ -32,6 +35,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
     "postcss": "^8",
+    "prettier": "^3.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.7.3"
   }
