--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-spinners": "^0.15.0",
     "react-use": "^17.6.0"
   },
   "devDependencies": {
